<resources>
    <string name="app_name">MyAndroidApp2</string>
    <string name="name_of_application">Name of application</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="confirmLogin">Button</string>
    <string name="location">Location</string>
    <string name="confirm_login">confirm</string>
    <string name="title_activity_log_in">LogIn</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="common_interests">common_interests</string>
    <string name="common_free_time">common_free_time</string>
    <string name="events">events</string>
    <string name="pen_friends">pen_friends</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login1">LOG IN</string>
    <string name="logo">TODO</string>
    <string name="tendina">TODO</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="fff_logo">TODO</string>
    <string name="interests_string">common interests</string>
    <string name="penfriends_string">pen friends</string>
    <string name="freetime_string">common free time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_people_here">Search people here...</string>
    <string name="user_full_name">user full name</string>
    <string name="user_email">useremail</string>
    <string name="lente_">TODO</string>
    <string name="account_btn">TODO</string>
    <string name="location_User">TextView</string>
    <string name="string_location_user">location_user</string>
    <string name="string_string_location_user">string_string_location_user</string>
    <string name="user_location">\"open the map!\"</string>
    <string name="string_user_location">Open the Map</string>
    <string name="firstLocationMessage">Open the map to check your location is correctly set!</string>
    <string name="buttonOfFreeTime">Button</string>
    <string name="buttonOfInterest">Button</string>
    <string name="profilepic">profilepic</string>
    <string name="sportsbtn">sportsbtn</string>
    <string name="sports">sports</string>
    <string name="music">MUSIC</string>
    <string name="extreme_sports">EXTREME SPORTS</string>
    <string name="acting">ACTING</string>
    <string name="art">Art</string>
    <string name="tv_series_and_movies">TV SERIES AND MOVIES</string>
    <string name="business">BUSINESS</string>
    <string name="politics">POLITICS</string>
    <string name="food_and_drinks">FOOD AND DRINKS</string>
    <string name="singing">SINGING</string>
    <string name="select_your_interests">Select your interests!</string>
    <string name="select_when_you_are_free_to_hang_out">Select when you are free to hang out!</string>
    <string name="confirm">Confirm</string>
    <string name="open_the_map">Open the map!</string>
    <string name="interests">INTERESTS</string>
    <string name="free_time">FREE TIME</string>
    <string name="check_position">Check position</string>
    <string name="confirm_position">Confirm position</string>
    <string name="imageselector">imageSelector</string>
    <string name="save">SAVE</string>
    <string name="search_users_that_have_this_interest_in_common_with_you">Search Users that have this interest in common with you</string>
    <string name="search_people_with_selected_interest">search people with selected interest</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="skip_and_search_people_with_same_free_time_as_you">Skip and search people with same free time as you</string>
    <string-array name="menu_items">
        <item>  </item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>