<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <Button
        android:id="@+id/GoogleMapsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="166dp"
        android:backgroundTint="#B36E6E"
        android:onClick="onGoogleMapsButton_Clicked"
        android:text="@string/location"
        android:textColor="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        tools:ignore="TextContrastCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/locationUser"
        android:layout_width="206dp"
        android:layout_height="75dp"
        android:text="@string/firstLocationMessage"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/GoogleMapsButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <ImageView
        android:id="@+id/tendina"
        android:layout_width="755dp"
        android:layout_height="80dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/tendina"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tendina"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="374dp"
        android:layout_height="190dp"
        android:layout_marginTop="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tendina"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profilepic" />

    <Button
        android:id="@+id/interestsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onBtnInterests_Clicked"
        android:text="@string/buttonOfInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoogleMapsButton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/freeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onBtnFreeTime_Clicked"
        android:text="@string/buttonOfFreeTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestsBtn" />

    <TextView
        android:id="@+id/InterestsUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_interests"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/interestsBtn"
        app:layout_constraintTop_toBottomOf="@+id/locationUser"
        app:layout_constraintVertical_bias="0.161" />

    <TextView
        android:id="@+id/FreeTimeUser"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="17dp"
        android:text="@string/select_when_you_are_free_to_hang_out"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/freeBtn"
        app:layout_constraintTop_toBottomOf="@+id/InterestsUser"
        app:layout_constraintVertical_bias="0.196" />
</androidx.constraintlayout.widget.ConstraintLayout>