<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_quantum_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.kuleuven.myandroidapp2.LogIn">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:contentDescription="@string/logo"
        android:src="@mipmap/logo2_foreground"
        tools:ignore="ImageContrastCheck" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/mailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:padding="12dp"
            tools:ignore="TextContrastCheck"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_box"
            android:hint="@string/password"
            android:padding="12dp"
            tools:ignore="TextContrastCheck"
            android:inputType="textPassword"
            android:importantForAutofill="no" />


    </LinearLayout>

    <Button
        android:id="@+id/loggInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/forgotPassTV"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_bg"
        android:onClick="onBtnLogin_Clicked"
        android:text="@string/login"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/forgotPassTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:minHeight="48dp"
        android:onClick="onBtnLogin_Clicked"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_200"
        android:textStyle="bold" />

</RelativeLayout>