<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">


        <ImageView
            android:id="@+id/tendina"
            android:layout_width="755dp"
            android:layout_height="80dp"
            android:adjustViewBounds="false"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tendina"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/tendina" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="5dp">

                    <TextView
                        android:id="@+id/interests"
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:layout_alignTop="@+id/interestsImage"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="93dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/interests_string"
                        android:textSize="20sp"
                        app:fontFamily="sans-serif" />

                    <ImageView
                        android:id="@+id/interestsImage"
                        android:layout_width="166dp"
                        android:layout_height="95dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="25dp"
                        android:contentDescription="@string/common_interests"
                        app:srcCompat="@drawable/book" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="5dp">

                    <TextView
                        android:id="@+id/penFriends"
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/penfriends_string"
                        android:textSize="20sp"
                        app:fontFamily="sans-serif" />

                    <ImageView
                        android:id="@+id/penFriendsImage"
                        android:layout_width="167dp"
                        android:layout_height="90dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="29dp"
                        android:contentDescription="@string/pen_friends"
                        app:srcCompat="@drawable/penfriend" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="133dp"
                    android:elevation="5dp">

                    <TextView
                        android:id="@+id/freetime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/freetime_string"
                        android:textSize="20sp"
                        app:fontFamily="sans-serif" />

                    <ImageView
                        android:id="@+id/freeTimeImage"
                        android:layout_width="123dp"
                        android:layout_height="73dp"
                        android:layout_above="@+id/freetime"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/common_free_time"
                        app:srcCompat="@drawable/freetime" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/events"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/eventsImage"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/events"
                        android:textSize="20sp"
                        app:fontFamily="sans-serif" />

                    <ImageView
                        android:id="@+id/eventsImage"
                        android:layout_width="126dp"
                        android:layout_height="86dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/events"
                        app:srcCompat="@drawable/events"
                        tools:ignore="ImageContrastCheck" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>